<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/tool" layout="@layout/toolbar"/>
    <LinearLayout
        android:id="@+id/city_container"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/tool"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_container"
        app:layout_constraintWidth_percent="0.7"
        >
        <EditText
            android:id="@+id/et_bus_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/buscode"
            android:inputType=""
            android:textColor="#88000000"
            android:focusableInTouchMode="true"
            android:singleLine="true"
            android:imeOptions="actionDone"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/direction_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/edit_container"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/bn_direction0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/direction0"

            android:backgroundTint="@color/colorPrimaryBackground"
            android:background="@drawable/shape_capsule"
            />
        <Button
            android:id="@+id/bn_direction1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/direction1"
            android:backgroundTint="@color/colorPrimaryBackground"
            android:background="@drawable/shape_capsule" />


    </LinearLayout>
    <Button
        android:id="@+id/bn_send"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/direction_container"

        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:text="@string/loadingroutedata"

        android:backgroundTint="@color/colorPrimaryBackground"
        android:background="@drawable/shape_capsule"/>


</androidx.constraintlayout.widget.ConstraintLayout>